--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,12 +9,7 @@ http {
     client_max_body_size 1000M;
     client_body_buffer_size 10M;
 
-    log_format timed '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for" '
-                      'rt=$request_time';
-
-    log_format collector '$remote_addr|$scheme|$host|$request_method|$server_protocol|$request_uri|$status|$request_time|$request_length|$bytes_sent|$upstream_response_time|$custom_request_body';
+    log_format collector '$remote_addr|$scheme|$host|$request_method|$server_protocol|$request_uri|$status|$request_time|$request_length|$bytes_sent|$upstream_response_time|$jrpc_method';
 
     log_format json_combined escape=json '{'
                                 '"remote_addr": "$remote_addr", '
@@ -29,7 +24,7 @@ http {
                                 '"request_time": "$request_time", '
                                 '"response_time": "$upstream_response_time", '
                                 '"headers": "$custom_request_headers", '
-                                '"jrpc_method": "$custom_request_body"'
+                                '"jrpc_method": "$jrpc_method"'
                                 '},';
 
     include /etc/nginx/conf.d/*.conf;
@@ -42,18 +37,18 @@ http {
                 local ok, json_data = pcall(cjson.decode, data)
                 if ok then
                     if json_data.method then
-                        ngx.var.custom_request_body = json_data.method
+                        ngx.var.jrpc_method = json_data.method
                     else
                         if data then
                             ngx.log(ngx.ERR, "Request: ", data)
                         end
-                        ngx.var.custom_request_body = "no_method_field"
+                        ngx.var.jrpc_method = "no_method_field"
                     end
                 else
-                    ngx.var.custom_request_body = "invalid_jsonrpc_request: " .. tostring(json_data)
+                    ngx.var.jrpc_method = "invalid_jsonrpc_request: " .. tostring(json_data)
                 end
             else
-                ngx.var.custom_request_body = "no_jsonrpc_field"
+                ngx.var.jrpc_method = "no_jsonrpc_field"
             end
 
             -- Capture request headers
